--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,28 +2,37 @@
 <html>
 <head>
 
-
-
 </head>
 <body>
     <center>
-        <table border="1" width="500">
+        <table border="1" width="700">
             
             <tr>
-                <td colspan="2" align="center">Place to visit:</td><td colspan="2" align="center">TeamLab Planets, Toyko</td>
+                <td colspan="2" align="center" bgcolor="lightblue">Academic qualifications:</td><td bgcolor="lightblue" colspan="1" align="center" width="150">Year awarded:</td>
             </tr>
 
             <tr>
-                <td>Location:</td><td align="center">Toyosu, Koto City</td>
-                <td>Museum name:</td><td>TeamLab Planets</td>
+                <td rowspan="2" align="center" width="200">Bachelor of Science</td>
+                <td>The University of Hong Kong</td><td>2018</td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center" bgcolor="lightblue">Survived!!</td>
             </tr>
 
             <tr>
-                <td colspan="2" align="center">More information:</td><td colspan="2" align="center"><a href=https://www.teamlab.art/e/planets/>Art museum with an immersive experience</a></td>
+                <td rowspan="2" align="center" width="200">Master of Environmental Science and Management</td>
+                <td>Hong Kong University of Science and Technology</td><td>2020</td>
             </tr>
-
             <tr>
-                <td colspan="4" align="center"><img src=“teamlab_planets.jpg” width=“200”></td>              
+                <td colspan="2" align="center" bgcolor="lightblue">Survived!!</td>
+            </tr>
+            
+            <tr>
+                <td rowspan="2" align="center" width="200">Master of Education</td>
+                <td rowspan="1">The University of Hong Kong</td><td>2025 (hopefully)</td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center" bgcolor="lightblue">Fighting!!!</td>    
             </tr>
 
         </table>
